# toyrenderer

./: .dir-locals.el  .gitignore  Makefile  README.md  compile_commands.json  compile_commands.json.bk  f.log.bk  imgui.ini  main.plist  meson.build  ogl.out
assets/Gauss/: Gauss.mtl
config/: MaterialConfigTest.json  RenderPassConfig.json  ShaderConfigTest.json
design_notes/: book.toml
design_notes/src/: SUMMARY.md  main.md  todo.md
include/: camera.hpp  common.hpp  engine2D.hpp  engine2D.hpp~  framebuffer.hpp  imgui_impl_opengl3.h  logger.hpp  logger.hpp~  mesh.cpp  mesh.hpp  meshinstance.hpp  primitivegen.hpp  resourceman.hpp  shader.hpp  shader.hpp~  texture.hpp  timer.stashed  uniformbuffer.hpp
include/glad/: glad.h
shaders/: #3d_basic.vert#  3d_basic.frag  3d_basic.frag~  3d_basic.vert  3d_basic.vert~  buddha.frag  buddha.vert  engine2d_basic.frag  engine2d_basic.vert  outline.frag  quad_postfx.frag  quad_sponza_buddha.frag  quad_sponza_buddha.vert  skybox.frag  skybox.vert  sponza.frag  sponza.vert  test_sim.comp  test_sim.frag  test_sim.vert  triangle.frag  triangle.frag~  triangle.vert  triangle.vert~  triangle2.frag  triangle2.frag~  triangle2.vert  triangle2.vert~
src/: camera.cpp  common.cpp  engine2D.cpp  engine2D.cpp~  framebuffer.cpp  glad.c  logger.cpp  main.cpp  main.cpp.stashed.2  main.cpp~  mesh.cpp  mesh.tpp  primitivegen.cpp  resourceman.cpp  shader.cpp  shader.cpp~  texture.cpp  timer.stashed
utils/: genshader.py
